Solid start on interpreter
Moved functions to interpreter, started doing interpretation properly, can do basic program (not properly tho).

Also made a quick test script

Needs environment and needs function defintion, variable def etc.

--- a/Lexer-Parser/Makefile
+++ b/Lexer-Parser/Makefile
@@ -1,5 +1,5 @@
-OBJS = lex.yy.o C.tab.o symbol_table.o nodes.o main.o
-SRCS = lex.yy.c C.tab.c symbol_table.c nodes.c main.c
+OBJS = lex.yy.o C.tab.o symbol_table.o nodes.o main.o interpreter.o
+SRCS = lex.yy.c C.tab.c symbol_table.c nodes.c main.c interpreter.c
 CC = gcc
 
 all:	mycc
@@ -8,7 +8,7 @@ clean:
 	rm ${OBJS}
 
 mycc:	${OBJS}
-	${CC} -g -o mycc ${OBJS} 
+	${CC} -g -o mycc ${OBJS}
 
 lex.yy.c: C.flex
 	flex C.flex
@@ -19,7 +19,7 @@ C.tab.c:	C.y
 .c.o:
 	${CC} -g -c $*.c
 
-depend:	
+depend:
 	${CC} -M $(SRCS) > .deps
 	cat Makefile .deps > makefile
 
